<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Magic Maze!</string>
    <string name="app_name">MagicMaze</string>
    <string name="introduce_yourself_title">Introduce yourself</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="start_game_button">Start game</string>
    <string name="level_done">Level done, tap to start new level</string>
    <string name="level_failed">Level failed, tap to restart</string>
    <string name="level_start_label">Tap to start the game</string>
    <string name="pre_scary_level_label">So far, so good. Let see how can you resolve the next level...</string>
    <string name="close_button">Close</string>
    <string name="game_end_message">Sorry for scaring you... You can smile now:) you\'ve accomplished the game:) Check the /sdcard/Movies/MagicMaze folder</string>
    <string name="app_about">About</string>
    <string name="app_settings">Settings</string>
    <string name="view_videos">View Videos</string>
    <string name="adjust_sensor_title">Sensor sensitivity:</string>
    <string name="sensor_lower_sensitivity">low</string>
    <string name="sensor_higher_sensitivity">high</string>
    <string name="scary_level_config_title">Scary level:</string>
    <string name="save_button">Save</string>

    <!--game menu labels-->
    <string name="start_game_again">Play one more time</string>
    <string name="watch_videos">Watch videos</string>
    <string name="videos_list">Videos list:</string>



</resources>
